// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sample renders > card-update-reminder matches its snapshot 1`] = `
{
  "subject": "Your Acme payment still needs attention",
  "text": "

Acme



UPDATE YOUR PAYMENT METHOD

Your Acme subscription has an outstanding balance of $49.00.



Invoice: INV-1042.



Review your payment details and update the payment method to resolve this balance.

Update payment method https://example.com/billing/payment

You received this email because a subscription payment is still outstanding.

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > come-back-offer matches its snapshot 1`] = `
{
  "subject": "A fresh start with Acme",
  "text": "

Acme



A FRESH START

Hi Ada, would you like to give Acme another try?

Explore the current plans and find one that fits your next project.

Review the details before you decide to return.



See your options https://example.com/plans



You received this email because you subscribed to product offers.

Acme, Inc.
1 Main Street, Springfield

Unsubscribe or manage preferences https://acme.example/unsubscribe/token

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > confirm-subscription matches its snapshot 1`] = `
{
  "subject": "Confirm your Acme subscription",
  "text": "

Acme



CONFIRM YOUR SUBSCRIPTION

One more step: confirm your email address to receive updates from Acme.

Confirm subscription https://example.com/confirm/token

This link expires in 7 days.

If you did not request this subscription, ignore this email.
We will not subscribe you.

You received this email because this address was submitted on a signup form.

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > feature-tips matches its snapshot 1`] = `
{
  "subject": "A tip for your Acme account",
  "text": "

Acme



ONE TIP TO GET STARTED

Hi Ada, try this in Acme:

Save a reusable template for a message you send often.



Try this tip https://example.com/templates



You received this email because you signed up for product tips.

Acme, Inc.
1 Main Street, Springfield

Unsubscribe or manage preferences https://acme.example/unsubscribe/token

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > invitation matches its snapshot 1`] = `
{
  "subject": "Ada Lovelace invited you to North team",
  "text": "

Acme



YOU ARE INVITED

Ada Lovelace invited you to join North team on Acme.



Invited role: Editor.



A message from Ada Lovelace: "Come work on the launch notes with us."



Accept invitation https://example.com/invite/abc123

This invitation expires in 7 days.

If you were not expecting an invitation, you can ignore this email.

You received this email because someone invited you to a team.

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > invoice matches its snapshot 1`] = `
{
  "subject": "Invoice INV-1042 from Acme, Inc.",
  "text": "

Acme



YOUR INVOICE

Acme, Inc. issued invoice INV-1042 for Acme.

InvoiceINV-1042Issue dateMarch 2, 2026, 3:04 PM UTCDue dateMarch 16, 2026Amount due$49.00

DescriptionQtyAmountField notebook1$49.00



Subtotal$49.00



Tax$0.00



Tax ID12-3456789



Billing address123 Example Street, Springfield



Pay invoice https://example.com/invoices/1042/pay



Download invoice PDF https://example.com/invoices/1042.pdf



You received this email because an invoice was issued.

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > magic-link matches its snapshot 1`] = `
{
  "subject": "Your Acme sign-in link",
  "text": "

Acme



SIGN IN

Sign in to your Acme account with this one-time link.

Sign in https://example.com/sign-in/abc123

This link expires in 1 hour and can be used once.



If the page asks for a sign-in code, enter:

482913



If you did not try to sign in, you can ignore this email.

You received this email because a sign-in link was requested for your account.

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > new-sign-in matches its snapshot 1`] = `
{
  "subject": "New sign-in to your Acme account",
  "text": "

Acme



NEW SIGN-IN

Your Acme account was signed in to at March 2, 2026, 3:04 PM UTC. If this was not you, revoke the sign-in below.



DeviceMac



BrowserChrome



Operating systemmacOS



IP address203.0.113.20



LocationPortland, Oregon



Revoke this sign-in https://example.com/account/sessions/revoke

If this was you, no action is needed.

You received this email because your account was used to sign in.

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > newsletter matches its snapshot 1`] = `
{
  "subject": "Latest from Acme",
  "text": "

Acme



LATEST FROM Acme



Three short notes from the last month.



A quieter editor

The editor now keeps the toolbar out of the way until you ask for it.

Read about the editor https://example.com/notes/editor



Exports

Account exports now include the attachments as well as the text.

Read about exports https://example.com/notes/exports



Read in your browser https://example.com/newsletters/march



You received this email because you subscribed to notes from the product.

Acme, Inc.
1 Main Street, Springfield

Unsubscribe or manage preferences https://acme.example/unsubscribe/token

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > newsletter-welcome matches its snapshot 1`] = `
{
  "subject": "Welcome to the Acme newsletter",
  "text": "

Acme



THANKS FOR SUBSCRIBING

Hi Ada, you are subscribed to the Acme newsletter.

Expect product news and practical tips. Manage your preferences or unsubscribe any time below.



Explore Acme https://example.com/start



You received this email because you subscribed to our product notes.

Acme, Inc.
1 Main Street, Springfield

Unsubscribe or manage preferences https://acme.example/unsubscribe/token

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > notification matches its snapshot 1`] = `
{
  "subject": "Your export is ready",
  "text": "

Acme



Your export is ready

Your account export is ready to download.



View details https://example.com/exports/1042



Notification settings https://example.com/settings/notifications



You received this email because your account has a new notification.

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > one-time-code matches its snapshot 1`] = `
{
  "subject": "482913 is your Acme code",
  "text": "

Acme



YOUR SIGN-IN CODE

Enter this code to sign in to Acme. Do not share it.

482913

This code expires in 10 minutes.



Request location: Portland, Oregon.



Device: iPhone.



If you did not try to sign in, you can ignore this email.

You received this email because a sign-in code was requested for your account.

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > order-confirmation matches its snapshot 1`] = `
{
  "subject": "Order 1042 confirmed",
  "text": "

Acme



ORDER CONFIRMED

We received your order 1042. Here are your order details.

DescriptionQtyAmountField notebook1$28.00Ink2$21.00



Subtotal$49.00



Discount$0.00



Shipping$0.00



Tax$0.00



Total$49.00



Shipping address123 Example Street, Springfield



Billing address123 Example Street, Springfield



Payment methodCard ending in 4242



View order status https://example.com/orders/1042

You received this email because you placed an order.

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > password-reset matches its snapshot 1`] = `
{
  "subject": "Reset your Acme password",
  "text": "

Acme



RESET YOUR PASSWORD

Hi Ada, use this link to reset your Acme password.

Reset password https://example.com/reset/abc123

This link expires in 1 hour. Request a new link if it expires.



Browser: Chrome.



Operating system: macOS.



If you did not ask for this, ignore this email. Your password will not change.

You received this email because a password reset was requested for your account.

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > payment-failed matches its snapshot 1`] = `
{
  "subject": "Your Acme payment failed",
  "text": "

Acme



YOUR PAYMENT NEEDS ATTENTION

We could not collect $49.00 for your Acme subscription.



Payment method: card ending in 4242.



We will try again on March 4, 2026, 9:00 AM UTC.



Service ends on March 9, 2026 if the payment is not updated.



Update payment method https://example.com/billing/payment



View invoice https://example.com/invoices/1042



You received this email because a payment failed.

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > receipt matches its snapshot 1`] = `
{
  "subject": "Your Acme receipt 1042",
  "text": "

Acme



RECEIPT

Your payment for Acme was received.

Receipt1042Payment dateMarch 2, 2026, 3:04 PM UTC

DescriptionQtyAmountField notebook1$28.00Ink2$21.00



Subtotal$49.00



Discount$0.00



Tax$0.00



Tax ID12-3456789



Total$49.00



Paid with Card ending in 4242.



Billing address123 Example Street, Springfield



View receipt https://example.com/receipts/1042



You received this email because a payment was made.

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > security-notice matches its snapshot 1`] = `
{
  "subject": "Your password was changed",
  "text": "

Acme



Your password was changed

This change was made to your Acme account. If you did not make it, secure your account below.



Changed: March 2, 2026, 3:04 PM UTC.



Location: Portland, Oregon.



Device: Mac.



Secure your account https://example.com/account/security

If you made this change, no action is needed.

You received this email because a security setting on your account changed.

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > setup-reminder matches its snapshot 1`] = `
{
  "subject": "Take the next step with Acme",
  "text": "

Acme



CONTINUE YOUR SETUP

Hi Ada, ready to continue setting up Acme?

Pick up where you left off. If you need a hand, contact support.



Continue setup https://example.com/setup



You received this email because you signed up for tips on getting started.

Acme, Inc.
1 Main Street, Springfield

Unsubscribe or manage preferences https://acme.example/unsubscribe/token

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > shipping-update matches its snapshot 1`] = `
{
  "subject": "Your order is on its way",
  "text": "

Acme



Your order is on its way

Here are the latest shipping details for order 1042.



Carrier: Parcel Post.



Tracking number: 1Z999.



Estimated delivery: March 8, 2026.



Track shipment https://example.com/track/1Z999



DescriptionQtyAmountField notebook1$28.00



You received this email because an order you placed has a shipping update.

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > subscription-canceled matches its snapshot 1`] = `
{
  "subject": "Your Acme subscription was canceled",
  "text": "

Acme



YOUR SUBSCRIPTION WAS CANCELED

Your Acme subscription was canceled because payment was not completed.



Outstanding invoice: INV-1042.



Review billing to resolve the outstanding payment. Contact support if you need help with your account.

Review billing https://example.com/billing/payment

You received this email because your subscription was canceled after an unpaid invoice.

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > trial-ending matches its snapshot 1`] = `
{
  "subject": "Your Acme trial ends on March 16, 2026",
  "text": "

Acme



YOUR TRIAL IS ENDING

Your Acme trial ends on March 16, 2026. Choose a plan to continue using the product after your trial.

Choose a plan https://example.com/billing/plan



Cancel before the trial ends https://example.com/billing/cancel



Export your data https://example.com/account/export



You received this email because your trial is close to its end.

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > upgrade-invite matches its snapshot 1`] = `
{
  "subject": "Need more room in Acme?",
  "text": "

Acme



FIND THE RIGHT PLAN

Hi Ada, need more capacity in Acme?

Compare the available plans and choose what fits your work. You can also keep your current plan.



Compare plans https://example.com/plans



You received this email because you subscribed to product recommendations.

Acme, Inc.
1 Main Street, Springfield

Unsubscribe or manage preferences https://acme.example/unsubscribe/token

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > verify-email matches its snapshot 1`] = `
{
  "subject": "Confirm your email for Acme",
  "text": "

Acme



CONFIRM YOUR EMAIL

Confirm this email address for your Acme account.

Confirm email https://example.com/verify/abc123

This link expires in 24 hours.



If the page asks for a verification code, enter:

482913



If you did not create an account, you can ignore this email.

You received this email because an address needed to be confirmed for your account.

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > we-miss-you matches its snapshot 1`] = `
{
  "subject": "Pick things up in Acme",
  "text": "

Acme



READY TO PICK THINGS UP?

Hi Ada, it has been a while since you used Acme.

Open your account when you are ready to continue. Contact support if you need help getting back into it.



Return to Acme https://example.com/account



You received this email because you subscribed to product reminders.

Acme, Inc.
1 Main Street, Springfield

Unsubscribe or manage preferences https://acme.example/unsubscribe/token

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;

exports[`sample renders > welcome matches its snapshot 1`] = `
{
  "subject": "Welcome to Acme",
  "text": "

Acme



WELCOME

Hi Ada, welcome to Acme. Your account is ready.



Get started https://example.com/start



Help getting started https://example.com/help



If you did not expect this account, contact support to request its closure.

You received this email because an account was created for you.

Acme https://acme.example · Support https://acme.example/support · Privacy https://acme.example/privacy",
}
`;
